--- a/gb/22/12/6/n13879349.md
+++ b/gb/22/12/6/n13879349.md
@@ -1,70 +1,60 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>县市长、副总统见证“嘉义城隍庙志”发表</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/12/id13879350-588851-600x400.jpg" />
 <h6>县市长、副总统同框见证“嘉义城隍庙志”发表。（嘉义市政府提供）
 </h6>
 <hr>
-<p>【大纪元2022年12月06日讯】（大纪元记者李撷璎台湾嘉义报导）国定<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%A4%E8%BF%B9.md#1">古迹</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%98%89%E4%B9%89%E5%9F%8E%E9%9A%8D%E5%BA%99.md#1">嘉义城隍庙</a>历史已久，1715年建成庙宇，至今已逾300年，为彰显传统文化、见证历史，历时4年时间审证编撰完成《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%98%89%E4%B9%89%E5%9F%8E%E9%9A%8D%E5%BA%99%E5%BF%97.md#1">嘉义城隍庙志</a>》，并于6日举办发表会。</p>
-<figure id="13879351" aria-describedby="caption-13879351" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13879351-588852-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2022/12/id13879351-588852-450x300.jpg" alt="参拜。" width="500" /></a><figcaption id="caption-13879351" class="wp-caption-text">参拜。（嘉义市政府提供）</figcaption></figure>
+<p>【大纪元2022年12月06日讯】（大纪元记者李撷璎台湾嘉义报导）国定古迹嘉义城隍庙历史已久，1715年建成庙宇，至今已逾300年，为彰显传统文化、见证历史，历时4年时间审证编撰完成《嘉义城隍庙志》，并于6日举办发表会。</p>
+<figure id="13879351" aria-describedby="caption-13879351" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13879351-588852-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2022/12/id13879351-588852-450x300.jpg" alt="参拜。" width="500" /></a><figcaption id="caption-13879351" class="wp-caption-text">参拜。（嘉义市政府提供）</figcaption></figure>
 <p>副总统赖清德专程莅临致贺，嘉义市长黄敏惠、嘉义县长翁章梁及编撰学者中科大阎亚宁教授团队及地方仕绅、各界信众也共同参与盛会，见证这个重要的历史时刻，为新书发布献上祝福，场面隆重盛大。</p>
-<figure id="13879352" aria-describedby="caption-13879352" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13879352-588853-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2022/12/id13879352-588853-450x300.jpg" alt="嘉义城隍庙志。" width="500" /></a><figcaption id="caption-13879352" class="wp-caption-text"><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%98%89%E4%B9%89%E5%9F%8E%E9%9A%8D%E5%BA%99.md#1">嘉义城隍庙</a>志。（嘉义市政府提供）</figcaption></figure>
-<p>黄敏惠表示，很高兴能见证《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%98%89%E4%B9%89%E5%9F%8E%E9%9A%8D%E5%BA%99%E5%BF%97.md#1">嘉义城隍庙志</a>》的完成，嘉义城隍庙300余年来守护地方，正派善良的信仰是安定全国社会的重要力量。城隍庙志不论对庙方、嘉义地区甚至整个台湾地区的早期开发史，都有特别历史意义，编史不易，感谢赖永川董事长保存文化的用心，带领全体干部、志工，细心投入维护如此珍贵的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%A4%E8%BF%B9.md#1">古迹</a>，相信这本详尽丰富的庙志，将引领更多人感受城隍庙的历史风华。</p>
-<figure id="13879353" aria-describedby="caption-13879353" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13879353-588854-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2022/12/id13879353-588854-450x300.jpg" alt="市长黄敏惠为新书发表祝贺。" width="500" /></a><figcaption id="caption-13879353" class="wp-caption-text">市长黄敏惠为新书发表祝贺。（嘉义市政府提供）</figcaption></figure>
+<figure id="13879352" aria-describedby="caption-13879352" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13879352-588853-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2022/12/id13879352-588853-450x300.jpg" alt="嘉义城隍庙志。" width="500" /></a><figcaption id="caption-13879352" class="wp-caption-text">嘉义城隍庙志。（嘉义市政府提供）</figcaption></figure>
+<p>黄敏惠表示，很高兴能见证《嘉义城隍庙志》的完成，嘉义城隍庙300余年来守护地方，正派善良的信仰是安定全国社会的重要力量。城隍庙志不论对庙方、嘉义地区甚至整个台湾地区的早期开发史，都有特别历史意义，编史不易，感谢赖永川董事长保存文化的用心，带领全体干部、志工，细心投入维护如此珍贵的古迹，相信这本详尽丰富的庙志，将引领更多人感受城隍庙的历史风华。</p>
+<figure id="13879353" aria-describedby="caption-13879353" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13879353-588854-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2022/12/id13879353-588854-450x300.jpg" alt="市长黄敏惠为新书发表祝贺。" width="500" /></a><figcaption id="caption-13879353" class="wp-caption-text">市长黄敏惠为新书发表祝贺。（嘉义市政府提供）</figcaption></figure>
 <p>黄敏惠强调，嘉义城隍庙的黄历7月中元祭典科仪是嘉义市最具代表性的宗教观光活动，祭典将城隍庙与市民紧密地结合，以文化带动嘉义市的观光，将嘉义市行销国际；黄市长也感谢城隍爷长期以来对市民信众的庇佑，积极地投入社会救助、关怀弱势，宣扬文化民俗艺术、守护全民的安全。</p>
-<figure id="13879354" aria-describedby="caption-13879354" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13879354-588855-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2022/12/id13879354-588855-450x300.jpg" alt="市长黄敏惠致词。" width="500" /></a><figcaption id="caption-13879354" class="wp-caption-text">市长黄敏惠致词。（嘉义市政府提供）</figcaption></figure>
+<figure id="13879354" aria-describedby="caption-13879354" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13879354-588855-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2022/12/id13879354-588855-450x300.jpg" alt="市长黄敏惠致词。" width="500" /></a><figcaption id="caption-13879354" class="wp-caption-text">市长黄敏惠致词。（嘉义市政府提供）</figcaption></figure>
 <p>本日特地出席与会的副总统赖清德不仅为庙志写序表达祝贺，本日发表会中更以鞠躬向嘉义城隍庙表达对台南震灾时大力协助支援的谢意。赖副总统提到，嘉义城隍庙信仰祭祀范围自古南至台南市、北迄基隆包括宜兰、花连、台东一带，是凝聚地方的重要信仰，更长期推动文化艺术，慈善救济、社会公益不遗余力，以宗教宣扬品格教育理念、坚定道德信仰，是改变社会的良善力量。</p>
-<figure id="13879355" aria-describedby="caption-13879355" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13879355-588856-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2022/12/id13879355-588856-450x300.jpg" alt="合照。 " width="500" /></a><figcaption id="caption-13879355" class="wp-caption-text">合照。 （嘉义市政府提供）</figcaption></figure>
+<figure id="13879355" aria-describedby="caption-13879355" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/12/id13879355-588856-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2022/12/id13879355-588856-450x300.jpg" alt="合照。 " width="500" /></a><figcaption id="caption-13879355" class="wp-caption-text">合照。 （嘉义市政府提供）</figcaption></figure>
 <p>赖永川表示，嘉义城隍庙原被指定为第三级古迹，民国101年至104年，全体董监事、执事、志工历经数年的努力奋斗，经文化部的严格审查，指定为国定古迹。城隍庙董监事会深知守护文化资产的重要性，长时间投入大量人力物力，彰显并发扬嘉义城隍庙的古迹价值；为期慎重，董监事会耗费4年时间委托中科大阎亚宁团队特编撰《嘉义城隍庙志》，全书共分六篇，包括历史与信仰、神明与祭祀、人物传略、建筑与文化、文物、管理与维护等，配合精细图档影像纪录，希望庙志可以和国定古迹相互辉映。</p>
 <p>为完成“嘉义城隍庙志”，城隍庙董事会委托中国科技大学，特别成立庙志编撰小组，从史料搜寻、访视、整理、到编撰成书，其过程相当艰辛；史料弥足珍贵，庙内各董监事无不全力投入，务求精益求精。庙志不但记载嘉义城隍庙三百多年来的沿革发展，更见证了每一代信众齐心协力，发挥虔诚信仰，希望为社会带来的正向的助益。◇</p>
 <p>责任编辑：昌英</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/1/n11906601.md#1">嘉义林宅融合城隍庙戏台 历史建筑修复开工</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/5/1/n12075383.md#1">1968APP人潮警示 嘉义城隍庙附近首亮灯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/8/11/n12321968.md#1">绥靖诸罗城隍中元祭 黄历6/27晚间起鼓登场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/8/18/n12339565.md#1">诸罗城隍慈悲中元祭 城隍开恩全嘉开普</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/10/21/n12491180.md#1">嘉义市历史建筑林宅修复 工法与设计处处惊喜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/9/10/n13223821.md#1">原嘉义城隍庙戏台将竣工 建物具文资价值</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/3/8/n13630405.md#1">嘉邑城隍庙挹注阮剧团戏剧教育90万元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/7/24/n13788000.md#1">城隍夜巡夯枷解厄 嘉义市8月27日登场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975692.md#1">嘉义市阅读表扬暨说书人颁奖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975067.md#1">东京食品展牵线 屏东石斑鱼20吨外销马来西亚</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/1/n11906601.md#1">嘉义林宅融合城隍庙戏台 历史建筑修复开工</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/5/1/n12075383.md#1">1968APP人潮警示 嘉义城隍庙附近首亮灯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/8/11/n12321968.md#1">绥靖诸罗城隍中元祭 黄历6/27晚间起鼓登场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/8/18/n12339565.md#1">诸罗城隍慈悲中元祭 城隍开恩全嘉开普</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/10/21/n12491180.md#1">嘉义市历史建筑林宅修复 工法与设计处处惊喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/9/10/n13223821.md#1">原嘉义城隍庙戏台将竣工 建物具文资价值</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/8/n13630405.md#1">嘉邑城隍庙挹注阮剧团戏剧教育90万元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/24/n13788000.md#1">城隍夜巡夯枷解厄 嘉义市8月27日登场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308648.md#1">旅宿业新制将上路 嘉市府呼吁业者提早因应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308293.md#1">屏县府携手一卡通 用敬老卡助长者智慧生活</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/13/n10561691.md#1" target="_blank">林辉：苏联20万“笑话犯”被关背后的荒谬</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/31/n11014025.md#1" target="_blank">绝处逢生 79岁老军医讲述的亲身经历</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/3/n9802518.md#1" target="_blank">你不了解的邓小平：与毛一同指挥大跃进（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/16/n11262924.md#1" target="_blank">参加纽约大集会 意大利小伙子找到人生意义</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973563.md#1">【未解之谜】血型中的创世之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/11/n13970800.md#1">【未解之谜】7万大军压境 只为抢一僧人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/9/n13968604.md#1">济公和尚破衣破扇 如何大显神通？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13969866.md#1">小村演大戏 “耶稣受难剧”历四百年经久不衰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957761.md#1">【古道人生】救人三命 天赐白银两坛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975565.md#1">【全球新闻】G7外长峰会继续关注台海局势</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13974859.md#1">【环球直击】中共射卫星 部分火箭残骸落入禁航区</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13974864.md#1">【中国禁闻】美军3种强大武器 可重创中共航母</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/13/n13971680.md#1">Costco自产品牌物美价廉 你不知道的七件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/12/n13970837.md#1">美海军有三种强大武器 可置中共航母于险境</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/16/n13973940.md#1">王友群：刘亚洲到底为什么沦为“阶下囚”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/16/n13974374.md#1">杨紫琼带小金人赴港 宴请周润发黄秋生等恩人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/16/n13974358.md#1">第41届香港金像奖揭晓 刘青云郑秀文封帝后</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973539.md#1">曾接种三针疫苗 大陆歌手宋雨琦确诊染疫</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/16/n13974409.md#1">写错影帝刘青云英文名 香港金像奖回收纪念特刊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975159.md#1">念不出金像奖获奖者大名 香港颁奖明星陷尴尬</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/16/n13973971.md#1">群山环抱海拔3454米 欧洲最高火车站在瑞士</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973573.md#1">想种木兰花吗？这些品种你要了解</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973744.md#1">纽约春日赏樱攻略 7大赏花地点不容错过</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973238.md#1">菠菜防白内障 与豆腐同食会结石？答案令你意外</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/9/n13968965.md#1">虾青素防眼病更佳 6种护眼顶级食物不可错过</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307329.md#1">【百年真相】从资本家到右派 李康年真话代价</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308353.md#1">【马克时空】乌军以牙还牙 越境攻击俄库尔斯克</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307706.md#1">《死侍与金钢狼》票房破9亿 周末有望达10亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/23/n14296647.md#1">知名医院主治医师：五种癌症可早期预防</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306483.md#1">为何天气炎热时比较不会感觉饿？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307219.md#1">如何去除衣服上的防晒乳污渍？ 这一物有奇效</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/12/6/n13879349.htm">县市长、副总统见证“嘉义城隍庙志”发表</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/12/6/n13879349.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/12/6/n13879349.htm">县市长、副总统见证“嘉义城隍庙志”发表</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/12/6/n13879349.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
